--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body> 
 
 <header>
-	<h1>
+	<h1 id="cb-code">
 		<a href=""><code>cubic-bezier(<span id="values"><span
 		 id="P1x" class="param">0</span>,<span
 		 id="P1y" class="param">0</span>,<span
@@ -27,7 +27,7 @@
 	<button class="control-point" id="P2" style="left:250px; top: 250px;"></button>
 	<span class="control-point" id="P3"></span>
 
-	<canvas height="600" width="300" id="curve"></canvas>
+	<canvas height="400" width="200" id="curve"></canvas>
 </div>
 
 <section id="preview">
@@ -40,8 +40,8 @@
 		<input type="range" id="duration" value="1" min="0.1" max="10" step="0.1" pattern="\d*\.?\d+" size="3" />
 		<output for="duration">1 second</output>
 	</p>
-	<canvas id="current" width="60" height="60"></canvas>
-	<canvas id="compare" width="60" height="60"></canvas>
+	<canvas id="current" width="30" height="30"></canvas>
+	<canvas id="compare" width="30" height="30"></canvas>
 </section>
 
 <section id="library">
