--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
 <section id="preview">
 	<h1>
-		Preview &amp; compare
+		Preview
 		<button id="go">Go!</button>
+        <span>
+            <!-- <label for="duration">Duration:</label> -->
+            <input type="range" id="duration" value="1" min="0.1" max="10" step="0.1" pattern="\d*\.?\d+" size="3" />
+            <output for="duration">1s</output>
+        </span>		
 	</h1>
-	<p>
-		<label for="duration">Duration:</label>
-		<input type="range" id="duration" value="1" min="0.1" max="10" step="0.1" pattern="\d*\.?\d+" size="3" />
-		<output for="duration">1 second</output>
-	</p>
 	<canvas id="current" width="30" height="30"></canvas>
 	<canvas id="compare" width="30" height="30"></canvas>
 </section>
@@ -49,9 +49,7 @@
 		Library
 		<button id="import">Import</button>
 		<button id="export">Export</button>
-	</h1>
-	<p>Click on a curve to compare it with the current one.</p>
-	
+	</h1>	
 	<form id="importexport">
 		<label for="json">To import curves, paste the code below and click “Import”</label>
 		<label for="json">Copy the code and save to a file to export</label>
