--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             Preview
             <button id="go">&#9654;</button>	
         </h1>
+        <p><strong>This curve contains values out of range.</strong> But fear not young padawan! Just use <code>a fallback</code> as well for Webkit until the <a href="https://bugs.webkit.org/show_bug.cgi?id=45761">bug #45761</a> fix propagates to Safari.</p>
         <div>
             <!-- <label for="duration">Duration:</label> -->
             <input type="range" id="duration" value="1" min="0.1" max="10" step="0.1" pattern="\d*\.?\d+" size="3" />
