--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 		 id="P1y" class="param">0</span>,<span
 		 id="P2x" class="param">.25</span>,<span
 		 id="P2y" class="param">1</span></span>)</code></a>
-		<button id="save">Save</button>
 	</h1>
-    <p><strong>This curve contains values out of range.</strong> But fear not young padawan! Just use <code>a fallback</code> as well for Webkit until the <a href="https://bugs.webkit.org/show_bug.cgi?id=45761">bug #45761</a> fix propagates to Safari.</p>
+<!--    <p><strong>This curve contains values out of range.</strong> But fear not young padawan! Just use <code>a fallback</code> as well for Webkit until the <a href="https://bugs.webkit.org/show_bug.cgi?id=45761">bug #45761</a> fix propagates to Safari.</p>-->
 </header>
 
 <div class="coordinate-plane"> 
@@ -34,13 +33,14 @@
 	<div id="controls">
         <h1>
             Preview
-            <button id="go">&#9654;</button>	
         </h1>
-        <div>
-            <!-- <label for="duration">Duration:</label> -->
+        <div class="range-group">
+        <!-- <label for="duration">Duration:</label> -->
             <input type="range" id="duration" value="1" min="0.1" max="10" step="0.1" pattern="\d*\.?\d+" size="3" />
             <output for="duration">1s</output>
-        </div>	    
+        </div>        
+        <button id="go">&#9654;</button>	
+	    
 	</div>
 	<div id="animation">
         <canvas id="current" width="30" height="30"></canvas>
@@ -52,8 +52,9 @@
 	<h1>
 		Library
 		<span class="button-group">
-            <button id="import">Import</button>
-            <button id="export">Export</button>
+            <button id="save">Add…</button>
+            <button id="import">Import…</button>
+            <button id="export">Export…</button>
 		</span>
 	</h1>	
 	<form id="importexport">
