--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		</span>
 	</h1>	
 	<form id="importexport">
-		<label for="json">To import curves, paste the code below and click “Import”</label>
+		<label for="json">Paste Code</label>
 		<label for="json">Copy the code and save to a file to export</label>
 		<textarea id="json"></textarea>
 		<button>Import</button>
