--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
 
 <meta charset="utf-8" />
-<title>cubic-bezier.com</title>	
+<title>Cubic Bezier</title>	
 <link href="style.css" rel="stylesheet" />
 <link rel="shortcut icon"  type="image/png" href="about:blank" />
 </head> 
